WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79462
Should not allow malformed \x escapes
https://bugs.webkit.org/show_bug.cgi?id=79462
Summary
Should not allow malformed \x escapes
Gavin Barraclough
Reported
2012-02-24 00:50:01 PST
The spec requires \x in strings to be followed by two hex digits; Chrome appears to enforce this, so conforming with the spec here should be pretty safe.
Attachments
Fix
(11.84 KB, patch)
2012-02-24 00:54 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-02-24 00:54:29 PST
Created
attachment 128682
[details]
Fix
WebKit Commit Bot
Comment 2
2012-02-24 02:37:53 PST
Attachment 128682
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/JavaScriptCore/tests/mozilla/js1_2/regexp/hexadecimal.js:33: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/ecma/LexicalConventions/7.7.4.js:175: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 3
2012-02-24 13:15:53 PST
Fixed in
r108841
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug