Source/JavaScriptCore/tests/mozilla/js1_2/regexp/hexadecimal.js
@@ -30,7 +30,7 @@
 	var SECTION = 'As described in Netscape doc "Whats new in JavaScript 1.2"';
 	var VERSION = 'no version';
     startTest();
-	var TITLE   = 'RegExp: \x# (hex) ';
+	var TITLE   = 'RegExp: \\x# (hex) ';
 
 	writeHeaderToLog('Executing script: hexadecimal.js');
 	writeHeaderToLog( SECTION + " "+ TITLE);
